[package]
edition = "2021"
name = "holochain_scaffolding_cli"
version = "0.1.9"
description = "CLI to easily generate and modify holochain apps"
license-file = "LICENSE_CAL-1.0"
homepage = "https://developer.holochain.org"
documentation = "https://docs.rs/holochain_scaffolding_cli"
repository = "https://github.com/holochain/scaffolding"
readme = "README.md"

[[bin]]
name = "hc-scaffold"
path = "src/bin/hc-scaffold.rs"

[lib]
name = "holochain_scaffolding_cli"
path = "src/lib.rs"

[dependencies]
holochain = { features=["test_utils"], version = "0.2.1"}
holochain_types = "0.2.1"
holochain_util = { features = ["backtrace"], version = "0.2.1" }
mr_bundle = "0.2.1"

dirs = "4.0.0"
ignore = "0.4"
anyhow = "1.0"
build-fs-tree = "0.4.0"
cargo_metadata = "0.15.0"
dialoguer = "0.10.2"
path-clean = "0.1.0"
regex = "1.6.0"
serde_yaml = "0.8"
degit = "0.1"
serde_json = "1"
structopt = "0.3.11"
thiserror = "1.0.22"
tokio = { version = "1.11", features = ["full"] }
toml = "0.5.9"
convert_case = "0.6.0"
syn = { version = "1.0.102", features = ["full", "extra-traits"] }
quote = "1.0.21"
pluralizer = "0.3.1"
prettyplease = "0.1.21"
proc-macro2 = "1"
handlebars = "4.3.5"
include_dir = "0.7.3"
serde = "1"
json_value_merge = "1.1.2"
temp-dir = "0.1"
semver = "1.0"

[dev-dependencies]
assert_cmd = "1.0"
