[package]
edition = "2021"
name = "holochain_scaffolding_cli"
version = "0.500.0-dev.6"
description = "CLI to easily generate and modify holochain apps"
license = "CAL-1.0"
homepage = "https://developer.holochain.org"
documentation = "https://docs.rs/holochain_scaffolding_cli"
repository = "https://github.com/holochain/scaffolding"
readme = "README.md"

[[bin]]
name = "hc-scaffold"
path = "src/bin/hc-scaffold.rs"

[lib]
name = "holochain_scaffolding_cli"
path = "src/lib.rs"

[dependencies]
holochain_types = "0.5.0-dev.15"
mr_bundle = "0.5.0-dev.3"

dirs = "5.0.1"
ignore = "0.4"
anyhow = "1.0"
build-fs-tree = "0.6.0"
cargo_metadata = "0.18.0"
dialoguer = "0.10.2"
path-clean = "1.0.1"
regex = "1.6.0"
serde_yml = "0.0.10"
serde_json = "1"
structopt = "0.3.11"
thiserror = "1.0.22"
tokio = { version = "1.11", features = ["full"] }
toml = "0.8.14"
convert_case = "0.6.0"
syn = { version = "2.0.39", features = ["full", "extra-traits"] }
quote = "1.0.21"
pluralizer = "0.4.0"
prettyplease = "0.2.15"
proc-macro2 = "1"
handlebars = "4.3.5"
include_dir = "0.7.3"
serde = "1"
semver = "1.0"
itertools = "0.13.0"
colored = "2.1.0"
dprint-plugin-typescript = "0.91.1"
markup_fmt = "0.10.0"
git2 = { version = "0.19.0", default-features = false, features = [
  "https",
  "ssh_key_from_memory",
  "vendored-libgit2",
  "vendored-openssl",
] }
