[package]
name = "holochain_cli_scaffold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hc-scaffold"
path = "src/bin/hc-scaffold.rs"

[lib]
name = "holochain_cli_scaffold"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
assert_cmd = "1.0"
