[package]
edition = "2021"
name = "holochain_scaffolding_cli"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hc-scaffold"
path = "src/bin/hc-scaffold.rs"

[lib]
name = "holochain_scaffolding_cli"
path = "src/lib.rs"

[dependencies]

holochain_scaffolding_definitions = {path = "../definitions"}
holochain_scaffolding_utils = {path = "../utils"}

anyhow = "1.0"
build-fs-tree = "0.4.0"
cargo_metadata = "0.15.0"
dialoguer = "0.10.2"
holochain_cli_bundle = {git = "https://github.com/holochain/holochain", rev = "9426206f457d0ecd807892863670c77f37bd831d"}
holochain_types = {git = "https://github.com/holochain/holochain", rev = "9426206f457d0ecd807892863670c77f37bd831d"}
holochain_util = {features = ["backtrace"], version = "0.0.12"}
mr_bundle = {git = "https://github.com/holochain/holochain", rev = "9426206f457d0ecd807892863670c77f37bd831d"}
path-clean = "0.1.0"
regex = "1.6.0"
serde_yaml = "0.8"
structopt = "0.3.11"
thiserror = "1.0.22"
tokio = {version = "1.11", features = ["full"]}
toml = "0.5.9"
convert_case = "0.1.0"


[dev-dependencies]
assert_cmd = "1.0"
