[package]
edition = "2021"
name = "holochain_scaffolding_cli"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hc-scaffold"
path = "src/bin/hc-scaffold.rs"

[lib]
name = "holochain_scaffolding_cli"
path = "src/lib.rs"

[dependencies]

ignore = "0.4"
anyhow = "1.0"
build-fs-tree = "0.4.0"
cargo_metadata = "0.15.0"
dialoguer = "0.10.2"
holochain_cli_bundle = "0.0.59"
holochain_types = "0.0.63"
holochain_util = {features = ["backtrace"], version = "0.0.12"}
mr_bundle = "0.0.17"
path-clean = "0.1.0"
regex = "1.6.0"
serde_yaml = "0.8"
serde_json = "1"
structopt = "0.3.11"
thiserror = "1.0.22"
tokio = {version = "1.11", features = ["full"]}
toml = "0.5.9"
convert_case = "0.1.0"
syn = "1.0.102"
quote = "1.0.21"
prettyplease = "0.1.21"
proc-macro2 = "*"
rand = "0.8.5"
Inflector = "*"
handlebars = "4.3.5"
include_dir = "0.7.3"
serde = "1"
json_value_merge = "1.1.2"

[dev-dependencies]
assert_cmd = "1.0"
temp-dir = "0.1"